rnsc/test_data/integration/error/lexer/quoted_identifiers/unterminated_string_with_newline.rns
.class public Test
"String that breaks
across lines"
.end